# fPCG_pipeline

./: LICENSE  README.md  pyproject.toml  requirements.txt
fPCG_pipeline/: __init__.py  data_processing.py  machine_learning.py  preprocessing.py  statistical_plotting.py
